; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/isci/extr_isci_timer.c_scif_cb_timer_stop.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/isci/extr_isci_timer.c_scif_cb_timer_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ISCI_TIMER = type { i32, i32 }

@.str = private unnamed_addr constant [6 x i8] c"TIMER\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"stop %p\0A\00", align 1
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @scif_cb_timer_stop(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.ISCI_TIMER*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.ISCI_TIMER*
  store %struct.ISCI_TIMER* %7, %struct.ISCI_TIMER** %5, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = call i32 @isci_log_message(i32 3, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i8* %8)
  %10 = load i32, i32* @FALSE, align 4
  %11 = load %struct.ISCI_TIMER*, %struct.ISCI_TIMER** %5, align 8
  %12 = getelementptr inbounds %struct.ISCI_TIMER, %struct.ISCI_TIMER* %11, i32 0, i32 1
  store i32 %10, i32* %12, align 4
  %13 = load %struct.ISCI_TIMER*, %struct.ISCI_TIMER** %5, align 8
  %14 = getelementptr inbounds %struct.ISCI_TIMER, %struct.ISCI_TIMER* %13, i32 0, i32 0
  %15 = call i32 @callout_stop(i32* %14)
  ret void
}

declare dso_local i32 @isci_log_message(i32, i8*, i8*, i8*) #1

declare dso_local i32 @callout_stop(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
